# yt-

./: .env.debug  .gitignore  POST_DEPLOYMENT_ENV_UPDATE.md  SYSTEM_DEPLOYMENT_GUIDE.md  bulletproof_integration.py  client_secret_919510636273-6irenq7b2tncl8r5pqajh9t8fp1n73.apps.googleusercontent.com.json  client_secret_919510636273.json  complete_startup.py  comprehensive_error_test.py  config.yaml  data_bridge.py  demo_content_flow.py  deploy_to_server.cmd  deploy_to_server.sh  deploy_updated_files.cmd  deploy_updated_files.sh  final_monitoring_verification.py  final_validation.py  get_youtube_tokens.py  master_bulletproof_setup.py  monay.service  monay_bulletproof.service  monay_environment.conf  post_deployment_validation.py  quick_deploy.cmd  quick_fix_deployment.py  refresh_youtube_tokens.py  requirements.txt  scp_all_py_files.cmd  setup_fast_detection.py  setup_system_deployment.py  start_complete.sh  start_monay_complete.py  start_wan_service.py  test_deployment.py  test_distribution_import.py  test_everything.py  test_fix_immediately.py  test_wan_generation.py  update_env_after_deployment.cmd  (+6 more)
ai_service/: main.py
data/: agents.json
server_package/: config.yaml  youtube_tokens.json
server_package/src/: __init__.py  enhanced_main.py  get_youtube_tokens.py
shared/: api_client.py  config.py
src/: enhanced_main.py  enhanced_main.py.backup  enhanced_main_backup obsolte for now .py  enhanced_main_clean.py  get_youtube_tokens.py  minimal_youtube_main.py  pyright_output.txt
src/wan/: pyproject.toml  video_generator.py
video_service/: main.py
(+160 files in other folders)
