[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "torch>=1.6"
    # Remove: "flash_attn"
]

[project]
dependencies = [
    "torch>=1.6",
    "transformers>=4.21.0",
    "numpy>=1.21.0"
    # Remove: "flash_attn>=2.0.0"
]

[project.optional-dependencies]
training = [
    "datasets>=2.0.0",
    "accelerate>=0.20.0"
    # Remove: "flash_attn>=2.0.0"
]